nexus/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nexus
  namespace: nexus
spec:
  ingressClassName: nginx
  rules:
  - host: nexus.local
    http:
      paths:
      - backend:
          service:
            name: nexus-server
            port:
              number: 80
        path: /
        pathType: Prefix
